@@ -1,3 +1,11 @@
+2005-01-01  Jorn Baayen  <jbaayen@gnome.org>
+
+	* PluginLib/PlayerInterface.cs:
+	* src/NotificationAreaIcon.cs:
+	* src/PlaylistWindow.cs:
+
+	Export UIManager instead of ActionGroup.
+
 2004-12-31  Jorn Baayen  <jbaayen@gnome.org>
 
 	* TODO:
